syntax = "proto2";
package com.ruixi.tpulse.convention;
option java_package="com.tenth.nft.protobuf";
option java_outer_classname = "NftWallet";

message BillDTO{
  required int64 billId = 1;
  required int32 activityCfgId = 2;
  required int64 uid = 3;
  required string productCode = 4;
  required string productId = 5;
  required int64 outOrderId = 6;
  required string value = 7;
  required string currency = 8;
  required string state = 9;
  required int64 createdAt = 10;
  optional string merchantType = 11;
  optional int64 merchantId = 12;
}

message BILL_PAY_IC{
  required int64 uid = 1;
  required string token = 2;
  required string password = 3;
}
message BILL_PAY_IS{
    required BillDTO bill = 1;
}

message BILL_DETAIL_IC{
  required int64 uid = 1;
  required string productCode = 2;
  required int64 outOrderId = 3;
}
message BILL_DETAIL_IS{
  required BillDTO bills = 1;
}

message RECHARGE_IC{
  required int64 uid = 1;
  required string token = 2;
}
message RECHARGE_IS{
  required BillDTO bill = 1;
}



